--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "papaparse": "^4.6.3",
     "react": "^16.8.1",
-    "react-csv-reader": "^1.2.2",
     "react-dom": "^16.8.1",
     "react-dropzone": "^10.0.6",
     "victory": "^32.1.0"
