--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.8.1",
     "react-dropzone": "^10.0.6",
     "react-vis": "^1.11.6",
+    "react-vis-styles": "^0.3.1",
     "victory": "^32.1.0"
   },
   "devDependencies": {
