--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "papaparse": "^4.6.3",
     "react": "^16.8.1",
+    "react-calendar-timeline": "^0.23.0",
     "react-dom": "^16.8.1",
     "react-dropzone": "^10.0.6",
     "react-player": "^1.10.0",
     "react-vis": "^1.11.6",
     "react-vis-styles": "^0.3.1",
+    "rosbag": "^2.0.2",
     "victory": "^32.1.0"
   },
   "devDependencies": {
