--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "interactjs": "^1.3.4",
+    "moment": "^2.24.0",
     "papaparse": "^4.6.3",
     "react": "^16.8.1",
     "react-calendar-timeline": "^0.23.0",
@@ -16,8 +18,7 @@
     "react-player": "^1.10.0",
     "react-vis": "^1.11.6",
     "react-vis-styles": "^0.3.1",
-    "rosbag": "^2.0.2",
-    "victory": "^32.1.0"
+    "rosbag": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
