--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@foobarbecue/papaparse": "^5.0.4",
     "interactjs": "^1.3.4",
     "moment": "^2.24.0",
-    "papaparse": "^4.6.3",
     "react": "^16.8.1",
     "react-calendar-timeline": "^0.23.0",
     "react-dom": "^16.8.1",
