--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-nano-react-app": "^0.1.0",
     "parcel-bundler": "^1.11.0"
   },
+  "browserslist": ["since 2017-06"],
   "babel": {
     "presets": [
       "nano-react-app"
