--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-player": "^1.10.0",
     "react-vis": "^1.11.6",
     "react-vis-styles": "^0.3.1",
-    "rosbag": "^2.0.2"
+    "react-visjs-timeline": "^1.5.0",
+    "rosbag": "^2.0.2",
+    "vis": "^4.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
