--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@foobarbecue/papaparse": "^5.0.4",
     "interactjs": "^1.3.4",
     "moment": "^2.24.0",
+    "parcel-plugin-static-files-copy": "^2.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-dropzone": "^10.0.6",
