--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "splor",
+  "name": "splor2",
   "version": "0.1.0",
   "description": "",
   "scripts": {
@@ -9,16 +9,13 @@
   "license": "MIT",
   "dependencies": {
     "@foobarbecue/papaparse": "^5.0.4",
-    "interactjs": "^1.3.4",
-    "moment": "^2.24.0",
-    "parcel-plugin-static-files-copy": "^2.0.0",
-    "react": "^16.8.1",
+    "react": "^16.8.6",
     "react-dom": "^16.8.1",
-    "react-dropzone": "^10.0.6",
-    "react-player": "^1.10.0",
-    "react-vis": "^1.11.6",
-    "react-vis-styles": "^0.3.1",
+    "react-dropzone": "^10.1.4",
+    "react-player": "^1.11.0",
+    "react-vis": "^1.11.7",
     "react-visjs-timeline": "^1.5.0",
+    "reactn": "^1.0.0",
     "rosbag": "^2.0.2",
     "vis": "^4.21.0"
   },
