--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.1",
     "react-dropzone": "^10.1.4",
+    "react-easy-state": "^6.1.1",
+    "react-icons": "^3.6.1",
     "react-player": "^1.11.0",
     "react-vis": "^1.11.7",
     "react-visjs-timeline": "^1.5.0",
-    "reactn": "^1.0.0",
     "rosbag": "^2.0.2",
+    "stores.js": "^1.1.3",
     "vis": "^4.21.0"
   },
   "devDependencies": {
