--- a/package.json
+++ b/package.json
@@ -23,8 +23,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "babel-eslint": "^10.0.1",
     "babel-preset-nano-react-app": "^0.1.0",
-    "parcel-bundler": "^1.11.0"
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "parcel-bundler": "^1.11.0",
+    "parcel-plugin-eslint": "^1.0.7",
+    "standard": "^12.0.1"
   },
   "browserslist": [
     "since 2017-06"
