--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-visjs-timeline": "^1.5.0",
     "rosbag": "^2.0.2",
     "stores.js": "^1.1.3",
-    "vis": "^4.21.0"
+    "vis": "^4.21.0",
+    "uuid": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -33,7 +34,6 @@
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
     "parcel-bundler": "^1.11.0",
-    "parcel-plugin-eslint": "^1.0.7",
     "standard": "^12.0.1"
   },
   "browserslist": [
