--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --public-url /splor/"
+    "build": "parcel build index.html --public-url /splor/dist/"
   },
   "license": "MIT",
   "dependencies": {
