--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@foobarbecue/papaparse": "^5.0.4",
     "file-saver": "^2.0.2",
+    "rc-progress": "^2.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.1",
     "react-dropzone": "^10.1.4",
