--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
   "license": "MIT",
   "dependencies": {
     "@foobarbecue/papaparse": "^5.0.4",
-    "file-saver": "^2.0.2",
-    "rc-progress": "^2.3.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.1",
-    "react-dropzone": "^10.1.4",
+    "file-saver": "^2.0.5",
+    "rc-progress": "^2.6.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-dropzone": "^10.2.2",
     "react-easy-state": "^6.1.3",
-    "react-icons": "^3.6.1",
-    "react-player": "^1.11.0",
-    "react-router-dom": "^5.0.1",
+    "react-icons": "^3.11.0",
+    "react-player": "^1.15.3",
+    "react-router-dom": "^5.2.0",
     "react-vis": "^1.11.7",
-    "react-visjs-timeline": "^1.5.0",
-    "rosbag": "^2.0.2",
+    "react-visjs-timeline": "^1.6.0",
+    "rosbag": "^2.6.3",
     "stores.js": "^1.1.3",
-    "uuid": "latest",
-    "vis": "^4.21.0"
+    "uuid": "^8.3.1",
+    "vis-timeline": "^7.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "babel-eslint": "^10.0.1",
+    "@babel/core": "^7.12.7",
+    "babel-eslint": "^10.1.0",
     "babel-preset-nano-react-app": "^0.1.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "parcel-bundler": "^1.11.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-standard": "^4.1.0",
+    "parcel-bundler": "^1.12.4",
     "standard": "^12.0.1"
   },
   "browserslist": [
