--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@foobarbecue/papaparse": "^5.0.4",
     "file-saver": "^2.0.5",
+    "mapbox-gl": "^1.13.0",
+    "mobility-toolbox-js": "^1.1.13",
+    "ol": "^6.4.3",
     "rc-progress": "^2.6.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -18,6 +21,7 @@
     "react-icons": "^3.11.0",
     "react-player": "^1.15.3",
     "react-router-dom": "^5.2.0",
+    "react-spatial": "^1.0.13",
     "react-vis": "^1.11.7",
     "react-visjs-timeline": "^1.6.0",
     "rosbag": "^2.6.3",
