--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-standard": "^4.1.0",
-    "parcel-bundler": "^1.12.4",
+    "parcel": "^2.0.0-beta.1",
     "standard": "^12.0.1"
   },
   "browserslist": [
